network-policy.yaml
apiVersion: extensions/v1beta1
kind: NetworkPolicy
metadata:
  name: wealdy-debug-network-policy
spec:
  podSelector:
    matchLabels:
      app: wealdy-debug
  egress:
  - {}
  ingress:
  - {}
  policyTypes:
  - Egress
  - Ingress
